--- a/src/view/index.html
+++ b/src/view/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="referrer" content="no-referrer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="http://lf-cdn-tos.bytescm.com/obj/static/atsx-fe/campus/favicon.ico">
+    <!-- <link rel="shortcut icon" href="http://lf-cdn-tos.bytescm.com/obj/static/atsx-fe/campus/favicon.ico"> -->
     <title>视频全屏背景</title>
     <style>
         * {
